--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
                      <div class="col-md-4 status">
                         <h5>$ <span id="subTotal">1,278</span></h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$ <span id="tax">0</span></h5>
+                        <h5>$ <span id="grand-total">1,278</span></h5>
                      </div>
                   </div>
                </div>
@@ -114,7 +114,29 @@
          }
 
          document.getElementById(product + '-price').innerText = productTotal;
+         calculateTotal();
       }
+      function calculateTotal(){
+         // const phoneInput = document.getElementById('iPhone-count');
+         // const phoneCount = parseInt(phoneInput.value);
+         const phoneCount =  getInputValue('iPhone');
+         const caseCount =  getInputValue('case');
+
+         // const caseInput = document.getElementById('case-count');
+         // const caseCount = parseInt(caseInput.value);
+
+         const totalPrice = phoneCount * 1219 + caseCount * 59;
+         document.getElementById('subTotal').innerText = totalPrice;
+         const tax =Math.round(totalPrice * 0.1);
+         document.getElementById('tax').innerText = tax;
+         const grandTotal = totalPrice + tax;
+         document.getElementById('grand-total').innerText = grandTotal;
+            }     
+         function getInputValue (product){
+         const productInput = document.getElementById(product + '-count');
+         const productCount = parseInt(productInput.value);
+         return productCount;
+            } 
       // function handlerCaseChange(isIncrease){
       //    const caseInput = document.getElementById('case-count');
       //    const caseCount = parseInt(caseInput.value);
